Updated punctuation checks